bug 594060, r=cdleary: Reflect.parse(): make source location information optional